[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
colored = "2.0"
clap = { version = "4.5.37", features = ["derive"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = [
    "blocking",
    "json"
]
